welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:78: error: value droite is not a member of Unit
	gauche();avance(15)droite()
                           ^PictureMono3:136: error: value droite is not a member of Unit
	gauche();avance(15)droite()
                           ^PictureMono3:194: error: value droite is not a member of Unit
	gauche();avance(15)droite()
                           ^