welcome.lessons.welcome.methods.picture.PictureMono3.scala.code
override def run() {
	def faireV() { 
avance()
baisseBrosse()
leveBrosse()
avance()
gauche()
avance()
baisseBrosse()
leveBrosse()
recule()
droite()
avance()
baisseBrosse()
leveBrosse()
avance()
gauche()

}
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	avance(15);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	avance(15)
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	recule (15)
	gauche();avance(15)droite()
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	avance(15);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	avance(15)
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	recule (15)
	gauche();avance(15)droite()
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	avance(15);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	avance(15)
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(4);gauche();avance(5);
	for (h<- 0 to 3 ) {faireV()}
	avance(5)
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite()
	for (h<- 0 to 3 ) {faireV()}
	gauche();avance(5);droite();
	for (h<- 0 to 3 ) {faireV()}
	recule(5)
	for (h<- 0 to 3 ) {faireV()}
	droite();avance(5);gauche()
	for (h<- 0 to 3 ) {faireV()}
	recule(5);droite();recule(9)
	recule (15)
	gauche();avance(15)droite()
}
